feat: add trace instrumentation for C# port comparison
Add comprehensive trace logging across all 62 source files (~1,250 trace
calls) to enable side-by-side comparison with the C# port of this library.

Key additions:
- src/Utils/trace-logger.ts: Centralized trace logger writing to
  /tmp/baileys_trace.log with sanitized output (never logs key material)
- trace_session.ts: Entry script with pairing code and QR code support
- AGENTS.md: Agent instructions for maintaining instrumentation and
  upstream merge policy
- .gitignore: Exclude auth artifacts and test scripts

Module names are intentionally identical to the C# port for grep-based
comparison: socket, noise-handler, signal, crypto, wa-binary-decode,
wa-binary-encode, messages-send, messages-recv, chats, libsignal, etc.

This fork exists solely to support the C# port at wwweb-csharp.
Upstream logic always takes priority on merge; only instrumentation
is preserved.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ test.ts
 TestData
 wa-logs*
 coverage
+
+# Trace session artifacts
+auth_test/
+trace_auth_info/
+test_*.js
+test_*.ts
+package-lock.json
